affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: disktype
                operator: In
                values:
                  - ssd
  containers:
    - args:
        - ngx
      image: nginx
      name: pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
