challenge.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
spec:


  containers:
    - image: nginx
      name: pod
      securityContext:
        capabilities:
          add:
            - SYS_TIME

      resources: {}
