config-map.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: time-check
  name: time-check
spec:

  volumes:
    - name: log-volume
      emptyDir: {}

  containers:
    - image: busybox




      command: ["/bin/sh", "-c", "while true; do date; sleep $TIME_FREQ; done > /opt/time/time-check.txt"]

      volumeMounts:
        - name: log-volume
          mountPath: /opt/time


      name: time-check
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
