env.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
spec:
  containers:
    - image: nginx
      name: pod
    - name: pod
      image: nginx
      command:
        - sh
        - -c
        - sleep 100
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
