init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: newpod-16
  name: newpod-16
spec:
  volumes:
    - name: my-movtle
      emptyDir: {}
  containers:
    - image: bosybox
      name: newpod-16
      ports:
        - containerPort: 8080
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
