persistent-volume.yaml

apiVersion: v1
kind: Pod
metadata:
  name: storage-pod #👈👈👈 Change
spec:
  volumes:
    - name: my-volume
      persistentVolumeClaim:
        claimName: my-pvc #👈👈👈 Change
  containers:
    - name: my-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/my-mount" #👈👈👈 Change
          name: my-volume
