probe.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
spec:
  containers:
    - args:
        - ngx
      image: nginx
      name: pod
      resources: {}
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 60
      livenessProbe:
        exec:
          command: ["ls /var/www/blabla" ]

  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
