probe1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: probe
  name: probe
spec:
  containers:
  - image: nginx
    name: probe



    readinessProbe:
      httpGet:
        port: 80
        path: /
      initialDelaySeconds: 5
    livenessProbe:
      httpGet:
        port: 80
        path: /
      initialDelaySeconds: 10
      periodSeconds: 30
    startupProbe:
      httpGet:
        port: 80
        path: /


    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
