resource-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:

      volumes:
        - name: data
          emptyDir: {}
        - name: redis-config
          configMap:
            name: redis-config

      containers:
        - image: redis
          name: redis
          volumeMounts:
            - name: data
              mountPath: /redis-master-data
            - name: redis-config
              mountPath: /redis-master
          resources:
            limits:
              cpu: "0.2"
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
