security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
    - name: volume
      emptyDir: {}

  securityContext:
    fsGroup: 3000
  containers:
    - image: nginx:alpine
      name: nginx

      volumeMounts:
        - mountPath: /var/cache/nginx
          name: volume

      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
