sleep-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-busybox
  name: my-busybox
spec:

  nodeName: controlplane
  volumes:
    - name: secret-volume
      secret:
        secretName: my-secret


  containers:

    - command:
        - sleep
        - "3600"
      image: nginx
      volumeMounts:
        - mountPath: /etc/secret-volume
          name: secret-volume


      name: my-busybox
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
