toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
spec:

  tolerations:
    - effect: NoSchedule
      key: disktype
      value: ssd


  containers:
    - args:
        - ngx
      image: nginx
      name: pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
