volume-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:

  volumes:
    - name: log-volume
      persistentVolumeClaim:
        claimName: log-claim

  containers:
    - image: nginx:alpine
      name: nginx

      volumeMounts:
        - mountPath: "/var/log/nginx"
          name: log-volume

  dnsPolicy: ClusterFirst
  restartPolicy: Always
