ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-vh-routing
spec:
  rules:
    - host: watch.ecomstore
      http:
        paths:
          - backend:
              service:
                name: video-service
                port:
                  number: 30093
            path: /video
            pathType: Exact
status:
  loadBalancer: {}
